# juce_meets_soundtouch

./: .gitignore  .gitmodules  CMakeLists.txt
Scripts/: build_linux_ninja.sh  build_macos_ninja.command  build_macos_xcode.command  build_windows_ninja.bat  build_windows_vs2022.bat  install_vcpkg_x64-linux.sh  install_vcpkg_x64-osx.command  install_vcpkg_x64-windows.bat
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
